# ekumath

./: CMakeLists.txt
examples/: access_element.cpp
include/: ekumath.hpp  matrix.hpp
src/: matrix.cpp
test/: test.cpp  test_matrix.cpp
